tests/toy/neg/001683_mutation.toylang
program a = { while if a then sleep; } .
